--- a/EverydaySPnlCountService/EverydaySPnlCountService.csproj
+++ b/EverydaySPnlCountService/EverydaySPnlCountService.csproj
@@ -53,6 +53,21 @@
     <Reference Include="EWPCB_SPnlCountClass">
       <HintPath>.\EWPCB_SPnlCountClass.dll</HintPath>
     </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>..\..\C# Reference DLL OpenSource\NPOI 2.2.1 binary package\Net40\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI">
+      <HintPath>..\..\C# Reference DLL OpenSource\NPOI 2.2.1 binary package\Net40\NPOI.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OOXML">
+      <HintPath>..\..\C# Reference DLL OpenSource\NPOI 2.2.1 binary package\Net40\NPOI.OOXML.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OpenXml4Net">
+      <HintPath>..\..\C# Reference DLL OpenSource\NPOI 2.2.1 binary package\Net40\NPOI.OpenXml4Net.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OpenXmlFormats">
+      <HintPath>..\..\C# Reference DLL OpenSource\NPOI 2.2.1 binary package\Net40\NPOI.OpenXmlFormats.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
