2016/10/24 1.修正每日鑽孔驗孔檢查時，工單抓取錯誤問題 2.新增每日製令單特殊油墨檢查清單

--- a/EverydaySPnlCountService/EverydaySPnlCountService.csproj
+++ b/EverydaySPnlCountService/EverydaySPnlCountService.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConnERP.cs" />
     <Compile Include="DFCheckHoleRecord.cs" />
     <Compile Include="MainMethod.cs" />
     <Compile Include="MainProgramInstaller.cs">
