2016/11/29 1.新增品保客訴處理(未逾期)清單通知

--- a/EverydaySPnlCountService/EverydaySPnlCountService.csproj
+++ b/EverydaySPnlCountService/EverydaySPnlCountService.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnERP.cs" />
+    <Compile Include="ConnEWNAS.cs" />
     <Compile Include="DFCheckHoleRecord.cs" />
     <Compile Include="MainMethod.cs" />
     <Compile Include="MainProgramInstaller.cs">
