--- a/EverydaySPnlCountService/EverydaySPnlCountService.csproj
+++ b/EverydaySPnlCountService/EverydaySPnlCountService.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>EverydaySPnlCountService</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>發行\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -23,7 +24,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -80,6 +80,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckVCUT_Jump.cs" />
+    <Compile Include="CheckVCUT_JumpLog.cs" />
     <Compile Include="ConnERP.cs" />
     <Compile Include="ConnEWNAS.cs" />
     <Compile Include="DFCheckHoleRecord.cs" />
