2017/09/18 1.新增每日製令單據檢查有無特殊注意事項。     每5分鐘檢查一次有無新的製令單並Log記錄。

--- a/EverydaySPnlCountService/EverydaySPnlCountService.csproj
+++ b/EverydaySPnlCountService/EverydaySPnlCountService.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckFMEdIssueNote.cs" />
     <Compile Include="CheckVCUT_Jump.cs" />
     <Compile Include="CheckVCUT_JumpLog.cs" />
     <Compile Include="ConnERP.cs" />
